--- a/_posts/2020-2-5-meet-up.md
+++ b/_posts/2020-2-5-meet-up.md
@@ -5,5 +5,10 @@ We hear it all the time. *I understand English but I can't speak it.* or maybe *
 *My presentation has all the information in it but I'm worried I won't be able to communicate well*. There's a club for you. Come check out
 first **English Speak Up!**  
 The schedule is 
-We'll be practicing introductions, presentation skills, and English for 2020 
+We'll be practicing introductions, presentation skills, and English for 2020 and beyond.
+
+Meetings are at 8:30 p.m. close to the the Stony Brook train station, pm for location
+U.S. # 585-424-0854   
+WatsApp +90534 839 5916   
+Thomas.C.Schwartz@Stonybrook.edu
 
