--- a/_posts/2020-2-5-meet-up.md
+++ b/_posts/2020-2-5-meet-up.md
@@ -4,8 +4,8 @@
 Is this you?  *I understand English but I can't speak it.*   
 or maybe *My friends and I always speak our native language*   
 or perhaps *My presentation is good but I'm nervous to speak*   
-There's a club for you --> **English Speak Up!**  
-On Wednesday February 5th at 8:30 
+There's a club for you --> **English Speak Up!** Wednesdays from 8:30 - 10:00 pm  
+First Wednesdays (February 5th) are free, other Wednesdays are 5$
 We'll be practicing introductions, presentation skills, and English for 2020 and beyond.
 
 Meetings are close to the the Stony Brook train station, pm for location  
