Update and rename 2020-2-5-meet-up.md to 2020-02-05-meet-up.md

--- a/_posts/2020-02-05-meet-up.md
+++ b/_posts/2020-02-05-meet-up.md
@@ -2,15 +2,15 @@
 ## ESL Speak up
 ---
 Is this you?  *I understand English but I can't speak it.*   
-or maybe *My friends and I always speak our native language*   
+or maybe *My friends and I always speak Chinese and I don't practice English*   
 or perhaps *My presentation is good but I'm nervous to speak*   
 There's a club for you --> **English Speak Up!** Wednesdays from 8:30 - 10:00 pm  
-First Wednesdays (February 5th) are free, other Wednesdays are 5$
-We'll be practicing introductions, presentation skills, and English for 2020 and beyond.
+
+We learn conversation, presentation skills, and English for 2020
 
 Meetings are close to the the Stony Brook train station, pm for location  
 gram: form_like_water  
 U.S. # 585-424-0854   
 WatsApp +90534 839 5916   
 Thomas.C.Schwartz@Stonybrook.edu
-
+First Wednesdays (February 5th) are free, other Wednesdays are 5$
