Update and rename 2014-3-3-Duolingo to 2019-11-03-Duolingo.md

--- a/_posts/2019-11-03-Duolingo.md
+++ b/_posts/2019-11-03-Duolingo.md
@@ -1,3 +1,8 @@
+---
+type: post
+title: Duolingo review
+---
+
 ![_config.yml]({{ site.baseurl }}/images/Yatagarasu_A.jpg)
 
 Duolingo is a free app (with minimal ads) that encodes language items with heavy focus on chunking. This is useful for some tricky
